WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178864
WebDriver: failing to process capabilities should produce InvalidArgument error not SessionNotCreated
https://bugs.webkit.org/show_bug.cgi?id=178864
Summary
WebDriver: failing to process capabilities should produce InvalidArgument err...
Carlos Garcia Campos
Reported
2017-10-26 06:41:08 PDT
See
https://w3c.github.io/webdriver/webdriver-spec.html#processing-capabilities
Attachments
Patch
(6.16 KB, patch)
2017-10-26 06:43 PDT
,
Carlos Garcia Campos
bburg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-10-26 06:43:07 PDT
Created
attachment 325004
[details]
Patch
Blaze Burg
Comment 2
2017-10-26 10:18:03 PDT
Comment on
attachment 325004
[details]
Patch rs=me
Carlos Garcia Campos
Comment 3
2017-10-27 00:11:04 PDT
Committed
r224088
: <
https://trac.webkit.org/changeset/224088
>
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:43:52 PST
<
rdar://problem/35568037
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug