WebDriver: failing to process capabilities should produce InvalidArgument error not SessionNotCreated https://bugs.webkit.org/show_bug.cgi?id=178864

Reviewed by Brian Burg.

Fixes most of the tests in imported/w3c/webdriver/tests/sessions/new_session/invalid_capabilities.py.

7.2 Processing Capabilities
https://w3c.github.io/webdriver/webdriver-spec.html#processing-capabilities

* WebDriverService.cpp:
(WebDriver::WebDriverService::processCapabilities const):

Canonical link: https://commits.webkit.org/195076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224088 268f45cc-cd09-0410-ab3c-d52691b4dbfc